# ollmcpc_v2

./: .gitignore  404.html  CMakeLists.txt  DOCS.md  README.md  index.html  mkdocs.yml
architecture/: index.html
configuration/: index.html
deployment/: index.html
docs/: architecture.md  configuration.md  deployment.md  index.md  installation.md  protocol.md  quickstart.md  troubleshooting.md
installation/: index.html
protocol/: index.html
quickstart/: index.html
scripts/: osassist_battery_info.sh  osassist_memory_info.sh  osecho_plus.sh  osenv_guard.sh  osexec_run.sh  osfile_watch.sh  osmem_compare_pids.sh  osmem_dependency_demo.sh  osmem_heapstack_range.sh  osmem_usage.sh  osnet_basic.sh  osproc_children_list.sh  osproc_find.sh  osproc_group_kill.sh  osproc_openfiles.sh  osshm_cleanup.sh  osshm_demo_chat.sh  osshm_list.sh  ossig_pingpong.sh  osthread_demo.sh  osthread_sync_demo.sh  osuptime_plus.sh  serve_docs.sh  setup.sh
search/: search_index.json
src/: main.cpp
tools/: check_io_status.sh  check_port_usage.sh  create_process.sh  diaspatcher  dispatcher  dispatcher.c  fork_tree_helper.c  get_active_connections.sh  get_process_threads.sh  get_process_tree.sh  get_top_cpu.sh  get_top_mem.sh  kill_process.sh  list_directory.sh  orphan.c  osassist_memory_info.sh  oscont.sh  osdir_size_top.sh  osdiskfree.sh  osecho_plus.sh  osenv_guard.sh  osfind.sh  osgrep.sh  oshelp.sh  oskillsafe.sh  osmem_heapstack_range.sh  osnet_basic.sh  osorphan.sh  osproc_openfiles.sh  osproctree.sh  osps.sh  osrepl.sh  ossig_pingpong.sh  osspawnchildren.sh  osstop.sh  (+11 more)
(+45 files in other folders)
